--- a/index.html
+++ b/index.html
@@ -4,64 +4,67 @@
         <meta charset="UTF-8"/>
         <title>Jorge Rangel Jimenez</title>
         <link rel="icon" type="image/png" href="images/favicon.png"/>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
+        <header class="header">
             <div>
-                <figure>
+                <figure class="logo">
                     <img src="images/logo.png" alt="logo"/>
                 </figure>
-                <nav>
+                <nav class="menu">
                     <ol>
                         <li>
-                            <a href="#portafolio">Portafolio</a>
+                            <a class="link" href="#portafolio">Portafolio</a>
                         </li>
                         <li>
-                            <a href="#experiencia">Esperiencia</a>
+                            <a class="link" href="#experiencia">Esperiencia</a>
                         </li>
                         <li>
-                            <a href="#contacto">Trabajemos Juntos</a>
+                            <a class="link" href="#contacto">Trabajemos Juntos</a>
                         </li>
                     </ol>
                 </nav>
             </div>
         </header>
-        <section>
+        <section class="hero">
             <h1>
                 Hola! soy <strong>Jorge Rangel</strong> <br/> Desarrolldor Web. 
             </h1>
             <img src="images/hero.jpg" width="500" height="300" alt="Imagen Jorge Rangel"/>
         </section>
-        <section id="portafolio">
+        <section id="portafolio" class="portfolio">
             <h2>Portafolio (Cursos Realizados)</h2>
-            <article>
-                <h3>Nombre curso</h3>
-                <h6>Platzi Inc</h6>
-                <p><small><strong>Fecha: </strong>01/07/2018</small></p>
-                <p><small><strong>Puedes verlo en: </strong>www.platzi.com</small></p>
-                <p>Descripcion del curso Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam adipisci ea esse maxime, numquam commodi</p>
-                <img src="images/platzi-video-react-native.png" width="500" alt="Proyecto del curso"/>
+            <article class="project">
+                <h3 class="project-title">Nombre curso</h3>
+                <h6 class="project-course">Platzi Inc</h6>
+                <p class="project-date"><small><strong>Fecha: </strong>01/07/2018</small></p>
+                <p class="project-url"><small><strong>Puedes verlo en: </strong>www.platzi.com</small></p>
+                <p class="project-description">Descripcion del curso Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam adipisci ea esse maxime, numquam commodi</p>
+                <figure class="project-imageContainer">
+                    <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="Proyecto del curso"/>
+                </figure>
             </article>
         </section>
         <section id="experiencia">
             <h2>Mas sobre mi experiencia</h2>
-            <article>
-                <figure>
-                    <img src="images/platzi-conf.jpg" width="500" alt="img-empresa"/>
+            <article class="event">
+                <figure class="event-imageContainer">
+                    <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="img-empresa"/>
                 </figure>
-                <h3>Nombre Empresa</h3>
-                <p>Descripción de la empresa</p>
-                <a href="" target="_blank">Ver Plática</a>
+                <h3 class="event-title">Nombre Empresa</h3>
+                <p class="event-description">Descripción de la empresa</p>
+                <a class="event-url" href="" target="_blank">Ver Plática</a>
             </article>
         </section>
-        <section id="contacto">
-            <form action="/suscripcion/">
+        <section id="contacto" class="contact">
+            <form action="/suscripcion/" class="from-email">
                 <h3>¿Creamos algo Juntos?</h3>
                 <input type="text" id="email" placeholder="Déjame tu Email">
                 <button>Enviar</button>
             </form>
         </section>
-        <footer>
+        <footer class="footer">
             footer
         </footer>
     </body>
