Ejemplo de Copyright

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </form>
         </section>
         <footer class="footer">
-            footer
+            <small>&copy; Copyright 2018, Example Corporation</small>
         </footer>
     </body>
 </html>
