Dimensiones fijas a los elementos

--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
             <h1>
                 Hola! soy <strong>Jorge Rangel</strong> <br/> Desarrolldor Web. 
             </h1>
-            <img src="images/hero.jpg" width="500" height="300" alt="Imagen Jorge Rangel"/>
+            <!-- <img src="images/hero.jpg" width="500" height="300" alt="Imagen Jorge Rangel"/> -->
         </section>
         <section id="portafolio" class="portfolio">
             <h2>Portafolio (Cursos Realizados)</h2>
             <article class="project">
-                <h3 class="project-title">Nombre curso</h3>
-                <h6 class="project-course">Platzi Inc</h6>
-                <p class="project-date"><small><strong>Fecha: </strong>01/07/2018</small></p>
-                <p class="project-url"><small><strong>Puedes verlo en: </strong>www.platzi.com</small></p>
-                <p class="project-description">Descripcion del curso Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam adipisci ea esse maxime, numquam commodi</p>
+                <div class="project-details">
+                    <h3 class="project-title">Nombre curso</h3>
+                    <h6 class="project-course">Platzi Inc</h6>
+                    <p class="project-date"><small><strong>Fecha: </strong>01/07/2018</small></p>
+                    <p class="project-url"><small><strong>Puedes verlo en: </strong>www.platzi.com</small></p>
+                    <p class="project-description">Descripcion del curso Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam adipisci ea esse maxime, numquam commodi</p>
+                </div>
                 <figure class="project-imageContainer">
                     <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="Proyecto del curso"/>
                 </figure>
