--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                     <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="Proyecto del curso"/>
                 </figure>
             </article>
+            <article class="project">
+                <div class="project-details">
+                    <h3 class="project-title">Nombre curso</h3>
+                    <h6 class="project-course">Platzi Inc</h6>
+                    <p class="project-date"><small><strong>Fecha: </strong>01/07/2018</small></p>
+                    <p class="project-url"><small><strong>Puedes verlo en: </strong>www.platzi.com</small></p>
+                    <p class="project-description">Descripcion del curso Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam adipisci ea esse maxime, numquam commodi</p>
+                </div>
+                <figure class="project-imageContainer">
+                    <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="Proyecto del curso"/>
+                </figure>
+            </article>
         </section>
         <section id="experiencia">
             <h2>Mas sobre mi experiencia</h2>
