--- a/flex.html
+++ b/flex.html
@@ -10,6 +10,7 @@
             display: flex;
             flex-direction: row;/* propiedad por defecto */
             flex-wrap: wrap;
+            justify-content: space-evenly;
         }
         .box {
             width: 50px;
