--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header class="header">            
             <figure class="logo">
-                <img src="images/logo.png" alt="logo"/>
+                <img src="images/logo.png" alt="logo" width="150"/>
             </figure>
             <nav class="menu">
                 <ol>
@@ -59,26 +59,70 @@
                 </figure>
             </article>
         </section>
-        <section id="experiencia">
-            <h2>Mas sobre mi experiencia</h2>
+        <h2 class="event-list-title">Mas sobre mi experiencia</h2>
+        <section id="experiencia" class="event-list">
             <article class="event">
                 <figure class="event-imageContainer">
                     <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="img-empresa"/>
                 </figure>
-                <h3 class="event-title">Nombre Empresa</h3>
-                <p class="event-description">Descripción de la empresa</p>
-                <a class="event-url" href="" target="_blank">Ver Plática</a>
+                <div class="event-details">
+                    <h3 class="event-title">Nombre Empresa</h3>
+                    <p class="event-description">Descripción de la empresa</p>
+                    <a class="event-url" href="" target="_blank">Ver Plática</a>
+                </div>
             </article>
+            <article class="event">
+                <figure class="event-imageContainer">
+                    <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="img-empresa"/>
+                </figure>
+                <div class="event-details">
+                    <h3 class="event-title">Nombre Empresa</h3>
+                    <p class="event-description">Descripción de la empresa</p>
+                    <a class="event-url" href="" target="_blank">Ver Plática</a>
+                </div>
+            </article>
+            <article class="event">
+                    <figure class="event-imageContainer">
+                        <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="img-empresa"/>
+                    </figure>
+                    <div class="event-details">
+                        <h3 class="event-title">Nombre Empresa</h3>
+                        <p class="event-description">Descripción de la empresa</p>
+                        <a class="event-url" href="" target="_blank">Ver Plática</a>
+                    </div>
+            </article>
+            <article class="event">
+                <figure class="event-imageContainer">
+                    <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="img-empresa"/>
+                </figure>
+                <div class="event-details">
+                    <h3 class="event-title">Nombre Empresa</h3>
+                    <p class="event-description">Descripción de la empresa</p>
+                    <a class="event-url" href="" target="_blank">Ver Plática</a>
+                </div>
+            </article>                                                
         </section>
         <section id="contacto" class="contact">
-            <form action="/suscripcion/" class="from-email">
+            <form action="/suscripcion/" class="form-email">
                 <h3>¿Creamos algo Juntos?</h3>
                 <input type="text" id="email" placeholder="Déjame tu Email">
                 <button>Enviar</button>
             </form>
+            <div class="social">
+                <a href="https://twiter.com" class="social-link twiter"></a>
+                <a href="https://facebook.com" class="social-link facebook"></a>
+                <a href="https://github.com" class="social-link github"></a>
+                <a href="https://instagram.com" class="social-link instagram"></a>
+            </div>
         </section>
         <footer class="footer">
-            <small>&copy; Copyright 2018, Example Corporation</small>
+            <div>
+                Curso de Desarrollo Web online 2018
+                <img src="images/platzi.png" alt="platzi" width="80"/>
+            </div>
+            <div>
+                Diseñado por <a href="#">@georgerangel</a> 
+            </div>
         </footer>
     </body>
 </html>
